# hello-world-api

./: .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  azure-pipelines.yml  deploy-environment.sh  deployment.json  manifest_template.yml  package-lock.json  package.json  pyproject.toml  sandbox-spec.yaml
.github/: dependabot.yml  proxygen-credentials-template.yaml  proxygen-settings.yaml
.github/workflows/: apigee-release-pipeline.yml  apigee-release.yml  continous-integration-workflow.yaml  pr-lint.yaml  sbom.yml  spec-release-pipeline.yml
api_tests/: .dockerignore  .gitignore  Dockerfile  conftest.py  helpers.py  makefile  pytest.ini  requirements.txt
api_tests/scenarios/: test_auth.py  test_endpoints.py  test_monitoring.py
api_tests/scripts/: config.py
api_tests/tests/: conftest.py  happy_path.py
api_tests/tests/auth/: test_oauth_endpoints.py
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: postman-tests.yml  tests.yml
deployment_config/: internal-dev-sandbox.json
docker/hello-world-sandbox/: Dockerfile  README.md  package-lock.json  package.json
docker/hello-world-sandbox/src/: app.js  handlers.js  index.js
docker/hello-world-sandbox/src/mock/: status.json
paas_client/: authenticate.py  oauth.py  oauth_usage_example.py  pyproject.toml  requirements.txt
proxies/live/apiproxy/policies/: AssignMessage.SetStatusResponse.xml  FlowCallout.GenericAsid.xml  OAuthV2.VerifyAccessToken.xml  (+3 more)
sandbox/: config.json  package-lock.json  package.json
sandbox/mock/: helloworld.json
scripts/: build_proxy.sh  compile-spec.sh  set_temporary_instance.py  template.py
specification/: hello-world.yaml
terraform/: main.tf  variables.tf
tests/: api_tests.py  conftest.py  package-lock.json  test_api.py  test_wait_for_status_and_ping.py  wait_for_status_and_ping.py
tests/e2e/: globals.js  globals.json  hello-world-api-sandbox.json  hello-world.collection.json  test-runner.js
tests/e2e/environments/: internal-dev-sandbox.postman.json  internal-dev-sandbox.postman_environment.json  local.postman_environment.json
tests/performance/: README.md  locustfile.py
(+6 files in other folders)
