[project]
python = "^3.10"
name = "hello-world-api"


[tool.poetry]
name = "apim-definitions"
version = "0.0.1-alpha"
description = "Hello World API Definitions"

license = "MIT"

authors = [
    "API management"
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/hello-world-api"
homepage = "https://digital.nhs.uk/developer/api-catalogue/hello-world"

keywords = ["healthcare", "uk", "nhs"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.4"
gitpython = "^3.1.44"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
pip-licenses = "^5.0.0"
jinja2 = "^3.1.6"
pytest = "^8.3.5"
pytest-nhsd-apim = "^5.0.0"
pytest-ordering = "^0.6"


[tool.poetry.scripts]
