[project]
python = "^3.13"
name = "hello-world-api"


[tool.poetry]
name = "apim-definitions"
version = "1.0.0-alpha"
description = "Hello World API Definitions"

license = "MIT"

authors = [
    "Paul Walkington <paul.walkington1@nhs.net>"
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/hello-world-api"
homepage = "https://digital.nhs.uk/developer/api-catalogue/hello-world"

keywords = ["healthcare", "uk", "nhs"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pyyaml = "^6.0.3"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.0"
gitpython = "^3.0.5"
pytest-ordering = "^0.6"
pytest-nhsd-apim = "^6.0.6"
authlib = "^1.6.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^24.10.0"
pip-licenses = "^5.0.0"
jinja2 = "^3.1.6"
locust = "^2.40.0"


[tool.poetry.scripts]
